--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>Example 1: Basic HTML Tags</title>
+</head>
+<body>
+<h1 >Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4><font color="blue"> Heading 4</font></h4>
+<h5> Heading 5</h5>
+<p>A paragraph with <strong>bold</strong> and <em>italic</em> words</p> 
+<p align="center"> A paragraph aligned to the center</p> 
+<p>using breaks...<br>
+there will be no blank line <br>
+between these lines of words</p>
+<!-- Last, some comments here; you don't see them in browser -->
+</body>
+</html>
